# XbotDep

./: .gitignore  README.md  VERSION  main_v1.py  pyproject.toml  requirements.txt
.github/workflows/: v1_1_preflight.yml
configs/: grasp_taxonomy_v1_1_3.json  inventory_v1_1.json  motion_quality_v1_1_3.json  sop_v1.json  workcell_layout_v1.json
docs/: OPEN_SOURCE_MUJOCO_REVIEW.md  V1_1_2_REVIEW.md  V1_1_3_REVIEW.md  V1_1_4_FINAL_ACCEPTANCE.md  V1_1_ACCEPTANCE_PLAN.md  V1_1_ITERATION_ROADMAP.md
models/: v1_contact_rich_workcell.xml
scripts/: accept_v1_1.py  run_v1_1_3_full_acceptance.py  run_v1_1_4_final_acceptance.py  validate_inventory.py  validate_mjcf_structure.py  validate_python_static.py  validate_sop_static.py  validate_v1_1_3_quality_contract.py  validate_v1_1_3_quality_report.py  validate_v1_1_4_release_freeze.py  validate_version_consistency.py  validate_workcell_layout.py
src/xbotdep/: __init__.py  dexterous_hand.py  fsm.py  inventory.py  mjcf_factory.py  motion_metrics.py  quality_gate.py  rl_env.py  skills.py  workcell_layout.py  world.py
