[project]
name = "xbotdep"
version = "1.0.0"
description = "V1 contact-rich dexterous manipulation baseline for PC case assembly in MuJoCo"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "mujoco>=3.2.0",
  "gymnasium>=0.29.0",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
